--- a/src/output.css
+++ b/src/output.css
@@ -579,6 +579,10 @@ video {
   padding: 1rem;
 }
 
+.font-bold {
+  font-weight: 700;
+}
+
 .text-orange-600 {
   --tw-text-opacity: 1;
   color: rgb(234 88 12 / var(--tw-text-opacity));
