--- a/src/output.css
+++ b/src/output.css
@@ -579,6 +579,11 @@ video {
   padding: 1rem;
 }
 
+.py-\[14px\] {
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
