--- a/src/output.css
+++ b/src/output.css
@@ -584,6 +584,11 @@ video {
   padding-bottom: 14px;
 }
 
+.px-\[16px\] {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
