--- a/src/output.css
+++ b/src/output.css
@@ -583,6 +583,11 @@ video {
   justify-content: space-between;
 }
 
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
 .p-4 {
   padding: 1rem;
 }
