--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,14 @@ video {
   --tw-contain-style:  ;
 }
 
+.left-2 {
+  left: 0.5rem;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
 .float-left {
   float: left;
 }
