--- a/src/output.css
+++ b/src/output.css
@@ -645,6 +645,10 @@ video {
   padding-right: 16px;
 }
 
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
