--- a/src/output.css
+++ b/src/output.css
@@ -603,6 +603,10 @@ video {
   align-items: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-between {
   justify-content: space-between;
 }
