--- a/src/output.css
+++ b/src/output.css
@@ -584,6 +584,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-slate-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
 .p-4 {
   padding: 1rem;
 }
