--- a/src/output.css
+++ b/src/output.css
@@ -583,6 +583,10 @@ video {
   align-items: center;
 }
 
+.justify-start {
+  justify-content: flex-start;
+}
+
 .justify-end {
   justify-content: flex-end;
 }
