--- a/src/output.css
+++ b/src/output.css
@@ -599,6 +599,11 @@ video {
   justify-content: flex-end;
 }
 
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
