--- a/src/output.css
+++ b/src/output.css
@@ -559,6 +559,16 @@ video {
   margin-right: auto;
 }
 
+.my-\[20px\] {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.my-\[100px\] {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
 .flex {
   display: flex;
 }
